--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <title>Header Example</title>
 </head>
 <body>
+  <header>
+  <img src="https://orange.codeberryschool.com/content/images/project-assets/codeberry-logo.png" alt="CodeBerry Logo">
+  <h1>CodeBerry Blog</h1>
+  <h2>Budapest</h2>
+</header>
 </body>
 </html>
